[package]
name = "leptos-state-test"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = ["Blob", "File", "FileList", "Url"] }
